Add TtT chat flow

--- a/translations/en.json
+++ b/translations/en.json
@@ -884,6 +884,14 @@
     "pairing": "Pairing",
     "view-my-wallet": "View my wallet",
     "share-my-profile": "Share my profile",
+    "tribute-state-required": "Requires {{snt-amount}} SNT tribute",
+    "tribute-state-pending": "Tribute pending...",
+    "tribute-state-paid": "Tribute paid",
+    "tribute-required-by-account": "{{account-name}} requires SNT to start a chat",
+    "tribute-to-talk-are-you-friends": "Are you friends? Ask to be added as a contact",
+    "tribute-to-talk-paywall-learn-more-1": "Our time and attention are our most valuable assets. Tribute to Talk lets you contact new people in exchange for an SNT payment.",
+    "tribute-to-talk-paywall-learn-more-2": "To start a chat with someone who has a tribute set, simply pay the required SNT and you will be added as a contact.",
+    "tribute-to-talk-paywall-learn-more-3": "If you know them, you can share your profile outside of Status to be added for free.",
     "share-chat": "Share chat",
     "share-link": "Share link",
     "share-profile-link": "Share profile link",
